* type=diff | bugfix for filter=jsonfile.json | not handling xpath split correctly
* type=diff | bugfix filter JSON file "EMPTY" part
* type=diff | JSON filter file - fix ruleorder display for "combinedruleordercheck"

GENERAL
* update dockerfiles to adjust for github actions
* pan-os-php version shadow-json | remove second duplicate output


2.0.69 (20230203)
UTIL:
* type=device | code improvements for actions=sp_spg-create-alert-only-bp/sp_spg-create-bp - reduce duplicate code
* type=rule | improve filters for ruletype=defaultsecurity
* type=overridefinder | improvement of usage message
* type=rule | extend validation for different rule actions and filters
* type=addressgroup-merger allowaddingmissingobjects allowmergingwithupperlevel | improve functionality to add / move missing objects
* type=diff filter=jsonfile.json | improved if combinedruleordercheck is set in JSON
* type=diff | filter=jsonfile.json - for exclude - introduce wildcard

BUGFIX:
* type=ironskillet-update | bugfix to download and store correct default iron-skillet snippets
* type=rule ruletype=defaultsecurity | bugfix to also import defaultSecurityRules, if only one was overwritten
* type=rule | bugfix for 'filter=(hit-count.fast <>!= XYZ)' via Panorama on multiple DG - but different content from FW
* type=diff filter=jsonfile.json | bugfix if include/exclude is not available at file to compare
* type=address-merger | bugfix if object from upperlevel value has /32 but DG object has only IP

GENERAL
* update default iron-skillet snippets
* docker introduce arm container


2.0.68 (20230130)
UTIL:
* type=diff | JSON filter - add also support for "/PATH/entry[@name='*']"
* type=diff | JSON filter file - support now combination of '*' and [text()[contains(.,'TEXT')]]

BUGFIX:
* type=diff | JSON filter file - additional rule order check did not import post rules correctly
* type=diff | bugfix - JSON filter file check not only * | check '*'